--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -9,7 +9,9 @@
 	<link rel="stylesheet" type="text/css" href="..{{ url_for('static', filename='styles/8-places.css') }}?{{ cache_id }}">
 	<link rel="icon" href="..{{ url_for('static', filename='images/icon.png')}}">
     <title>HBnB</title>
-	
+
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="../static/scripts/1-hbnb.js"></script>
   </head>
   <body>
     <header>
@@ -41,7 +43,7 @@
 	  <div class="popover">
 	    <ul>
 	      {% for amenity in amenities %}
-	      <li>{{ amenity.name }}</li>
+	      <li><input type="checkbox" data-id="{{ amenity.id }}" data-name="{{ amenity.name }}">{{ amenity.name }}</li>
 	      {% endfor %}
 	    </ul>
 	  </div>
