--- a/web_dynamic/templates/2-hbnb.html
+++ b/web_dynamic/templates/2-hbnb.html
@@ -9,11 +9,15 @@
 	<link rel="stylesheet" type="text/css" href="..{{ url_for('static', filename='styles/8-places.css') }}?{{ cache_id }}">
 	<link rel="icon" href="..{{ url_for('static', filename='images/icon.png')}}">
     <title>HBnB</title>
-	
+
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="../static/scripts/2-hbnb.js"></script>
+
   </head>
   <body>
     <header>
       <div class="logo"></div>
+	  <div id="api_status"></div>
     </header>
     <div class="container">
       <section class="filters">
@@ -41,7 +45,7 @@
 	  <div class="popover">
 	    <ul>
 	      {% for amenity in amenities %}
-	      <li>{{ amenity.name }}</li>
+	      <li><input type="checkbox" data-id="{{ amenity.id }}" data-name="{{ amenity.name }}">{{ amenity.name }}</li>
 	      {% endfor %}
 	    </ul>
 	  </div>
